AI dodges "wall of bullets"